agrego pantalla de inicio y fin
Para agregar la funcionalidad de volver a jugar el juego,  y de ofrecer al jugador la posibilidad de arrancar el juego cuando quiera.

--- a/main.css
+++ b/main.css
@@ -4,3 +4,24 @@
     display: grid;
     place-items: center;
 }
+
+.oculto{
+    display: none !important;
+}
+
+#pantalla-inicio{
+    display: grid;
+    place-items: center;
+}
+
+#pantalla-juego{
+    padding: 10px;
+    display: grid;
+    grid-template-rows: 7fr 1fr;
+    row-gap: 1em;
+}
+
+#pantalla-inicio button {
+    display: block;
+    margin: 0 auto;
+}
